2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	* defs.h (free): Move declaration from here.
	* utils.c (free): To here.
	(xfree): Document as the only call to free().
	* config/pa/xm-hppah.h (free): Delete declaration.

2001-03-19  Kevin Buettner  <kevinb@redhat.com>

	* config/ia64/linux.mh (NATDEPFILES): Add proc-service.o to
	this list.

2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	* eval.c (evaluate_subexp): Remove #ifdef __STDC__ and ``inline''.
	* config/mips/xm-mips.h (offsetof): Define when !GNUC not !STDC.
	* cli/cli-cmds.c (init_cli_cmds): Remove #ifdef __STDC__

2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	* TODO: List known problems with TUI.

2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Jimmy Guo stepped down as a maintiner (TUI,
	gdb.hp).

2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	* remote.c (remote_cisco_section_offsets): Do not cast result from
	bfd_get_section_name.
	(compare_sections_command): Ditto.
	(remote_cisco_section_offsets): Make ``p'' a const pointer.
	(compare_sections_command): Ditto for ``sectname''.

2001-03-19  Andrew Cagney  <ac131313@redhat.com>

	From Mon Nov 20 13:59:29 2000 Andrew Cagney <cagney@b1.cygnus.com>:
	* valops.c (hand_function_call): Simplify computation of the
	address of the pushed argument.
 
2001-03-17  Andrew Cagney  <ac131313@redhat.com>

	* p-exp.y (parse_number): Avoid shift overflow when ``long''.
	Code copied from c-exp.y.

2001-03-18  Kevin Buettner  <kevinb@redhat.com>

	* acconfig.h (HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS)
	(HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS)
	(HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS): New configure macros.
	* configure.in (HAVE_STRUCT_LINK_MAP32): Move this test out
	of the Solaris procfs testing section.  Instead, group with...
	(HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS)
	(HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS)
	(HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS): New <link.h> tests.
	* configure: Regenerate.
	* config.in: Regenerate.
