@@ -42,5 +42,3 @@
 #define MALLOC_INCOMPATIBLE
 
 extern void *malloc (size_t);
-
-extern void *realloc (void *, size_t);
